[package]
name = "key-value"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cosmwasm-std = "1.0.0"
cosmwasm-storage = "1.0.0-beta"
serde = { version = "1.0.125", default-features = false, features = ["derive"] }
thiserror = { version = "1.0.23" }

[lib]
crate-type = ["rlib", "cdylib"]
